--- a/layouts/_common.scss
+++ b/layouts/_common.scss
@@ -370,6 +370,7 @@
 // Home End
 //about start
 #about {
+  overflow: hidden;
   .hero {
     position: relative;
     overflow: hidden;
@@ -761,7 +762,7 @@
 }
 // Admission End
 //Gallery start
-#gallery{
+#gallery {
   .hero {
     position: relative;
     overflow: hidden;
@@ -803,25 +804,32 @@
       }
     }
   }
-  .cardImgs{
+  .cardImgs {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 10px;
-    margin-bottom: 30px;
+    margin:0 10px 30px;
+    @media (min-width:576px){
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (min-width:768px){
+      grid-template-columns: repeat(3, 1fr);
+    }
     @media (min-width: 992px) {
       margin-bottom: 50px;
+      grid-template-columns: repeat(4, 1fr);
     }
-    img{
+    img {
       max-width: 300px;
       height: 300px;
       width: 100%;
       margin: 0 auto;
       cursor: pointer;
-    transition: transform 0.3s ease;
+      transition: transform 0.3s ease;
 
-    &:hover {
-      transform: scale(1.05);
-    }
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
   .modal {
@@ -833,7 +841,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-  
+
     .modal-content {
       max-width: 90%;
       max-height: 90%;
@@ -846,7 +854,7 @@
       border-radius: 10px;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
     }
-  
+
     .close {
       position: absolute;
       top: 10px;
@@ -855,7 +863,7 @@
       font-size: 35px;
       font-weight: bold;
       cursor: pointer;
-  
+
       &:hover {
         color: #f00;
       }
@@ -914,7 +922,7 @@
       font-weight: 500;
       color: $primary;
       margin-bottom: 15px;
-      @media (min-width:992px){
+      @media (min-width: 992px) {
         margin-bottom: 30px;
       }
     }
@@ -924,7 +932,7 @@
       line-height: 25px;
       margin-bottom: 20px;
       font-weight: 500;
-      @media (min-width:992px){
+      @media (min-width: 992px) {
         font-size: 22px;
         line-height: 30px;
       }
@@ -935,43 +943,43 @@
       background-color: $border;
       padding: 30px;
       position: relative;
-     @media (min-width:768px){
-      &::after{
-        content: "";
-        position: absolute;
-        width: 100px;
-        height: 100px;
-        background-color: $primary;
-        top: -20px;
-        right: -20px;
-        z-index: -1;
+      @media (min-width: 768px) {
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100px;
+          height: 100px;
+          background-color: $primary;
+          top: -20px;
+          right: -20px;
+          z-index: -1;
+        }
       }
-     }
-      h3{
+      h3 {
         line-height: 35px;
         font-weight: 400;
       }
     }
   }
-  .instructorDetails{
+  .instructorDetails {
     margin-bottom: 30px;
     @media (min-width: 992px) {
       margin-bottom: 50px;
     }
-    .container{
+    .container {
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       gap: 20px;
-      @media (min-width:576px){
+      @media (min-width: 576px) {
         grid-template-columns: repeat(2, 1fr);
       }
-      @media (min-width:768px){
+      @media (min-width: 768px) {
         grid-template-columns: repeat(3, 1fr);
       }
-      @media (min-width:992px){
+      @media (min-width: 992px) {
         grid-template-columns: repeat(4, 1fr);
       }
-      .card{
+      .card {
         width: 100%;
         max-width: 300px;
         border: 1px solid $border;
@@ -979,30 +987,29 @@
         margin: 0 auto;
         text-align: center;
         cursor: pointer;
-        transition: all .3s ease;
-        box-shadow: 0px 0px 30px 0px rgba(32, 32,32, 0.15);
-        &:hover{
+        transition: all 0.3s ease;
+        box-shadow: 0px 0px 30px 0px rgba(32, 32, 32, 0.15);
+        &:hover {
           background: $primary;
           color: $white;
-          box-shadow: 0px 0px 30px 0px rgba(32, 32,32, 0.15);
+          box-shadow: 0px 0px 30px 0px rgba(32, 32, 32, 0.15);
         }
-        img{
+        img {
           border-radius: 50%;
           width: 100px;
           height: 100px;
           margin: 0 auto 20px;
-         
         }
-        span{
+        span {
           display: block;
         }
-        .name{
+        .name {
           font-weight: 600;
           margin-bottom: 10px;
           font-size: 18px;
           line-height: 22px;
         }
-        .designation{
+        .designation {
           font-size: 15px;
           line-height: 19px;
         }
@@ -1012,10 +1019,10 @@
 }
 //Instructor End
 // Announcemnt start
-.announcements{
-  .hero{
+.announcements {
+  .hero {
     background-color: $primary;
-    height:100vh;
+    height: 100vh;
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
@@ -1023,7 +1030,7 @@
     @media (min-width: 992px) {
       margin-bottom: 50px;
     }
-    .container{
+    .container {
       margin-top: 100px;
       display: flex;
       justify-content: space-between;
@@ -1031,11 +1038,11 @@
       gap: 10px;
       color: $white;
       flex-direction: column;
-      @media (min-width:768px){
+      @media (min-width: 768px) {
         flex-direction: row;
         gap: 50px;
       }
-      img{
+      img {
         border-radius: 50%;
         height: 250px;
         max-width: 250px;
@@ -1044,22 +1051,22 @@
       }
     }
   }
-  .announcementWrap{
+  .announcementWrap {
     text-align: center;
     margin-bottom: 30px;
- @media (min-width:992px){
-  margin-bottom: 50px;
- }
- .text{
-  background-color: $border;
-  padding: 20px;
-  border-radius: 10px;
-  text-align: start;
-  margin-bottom: 15px;
- }
- .announcementTitle{
-  color: red;
- }
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    .text {
+      background-color: $border;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: start;
+      margin-bottom: 15px;
+    }
+    .announcementTitle {
+      color: red;
+    }
   }
 }
 // Announcemnt end
@@ -1271,9 +1278,9 @@
         }
       }
       .map {
-        padding:0 10px;
-width: 100%;
-max-width: 500px;
+        padding: 0 10px;
+        width: 100%;
+        max-width: 500px;
         iframe {
           width: 100%;
           max-width: 500px;
